--- a/bollywood.html
+++ b/bollywood.html
@@ -18,20 +18,18 @@
                     Find
                 </button>
                 <datalist id="movielist">
-                    <option value="Bato"></option>
-                    <option value="Chadke"></option>
-                    <option value="Chadke 2"></option>
-                    <option value="Dal Bhat Tarkari"></option>
-                    <option value="Degree Maila"></option>
-                    <option value="Dui Numbari"></option>
-                    <option value="Fullbari"></option>
-                    <option value="Gharjwai"></option>
-                    <option value="Guleli"></option>
-                    <option value="Jaari"></option>
-                    <option value="Maha Purush"></option>
-                    <option value="Modibeni"></option>
-                    <option value="Nango Gaun"></option>
-                    <option value="Prasad"></option>
+                    <option value="Animal"></option>
+                    <option value="Deva"></option>
+                    <option value="Kaithi"></option>
+                    <option value="KGF : Chapter 1"></option>
+                    <option value="KGF : Chapter 2"></option>
+                    <option value="Leo"></option>
+                    <option value="Live"></option>
+                    <option value="Marco"></option>
+                    <option value="RA.ONE"></option>
+                    <option value="Salaar"></option>
+                    <option value="Sikandar"></option>
+                    <option value="Vikram"></option>
                 </datalist>
             </div>
             <div class="films" id="Bollywood">
