--- a/bollywood.html
+++ b/bollywood.html
@@ -11,7 +11,7 @@
 <body>
  <div id="content">
     <div id="contentbox">
-        <div id="bollywoodbox">
+        <div id="kollywoodbox">
             <div id="search">
                 <input type="search" list="movielist" class="searchbox" id="ksearch" placeholder="List of movies">
                 <button class="searchbtn" id="kbtn" onclick="findB()">
