--- a/bollywood.html
+++ b/bollywood.html
@@ -13,7 +13,7 @@
     <div id="contentbox">
         <div id="kollywoodbox">
             <div id="search">
-                <input type="search" list="movielist" class="searchbox" id="ksearch" placeholder="List of movies">
+                <input type="search" list="movielist" class="searchbox" id="bsearch" placeholder="List of movies">
                 <button class="searchbtn" id="kbtn" onclick="findB()">
                     Find
                 </button>
