--- a/bollywood.html
+++ b/bollywood.html
@@ -17,6 +17,9 @@
                 <button class="searchbtn" id="kbtn" onclick="findB()">
                     Find
                 </button>
+                <button class="searchtbn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
+                    &#9993;
+                </button>
                 <datalist id="movielist">
                     <option value="Animal"></option>
                     <option value="Deva"></option>
