--- a/kollywood.html
+++ b/kollywood.html
@@ -17,6 +17,9 @@
                 <button class="searchbtn" id="kbtn" onclick="findK()">
                     Find
                 </button>
+                <button class="searchtbn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
+                    &#9993;
+                </button>
                 <datalist id="movielist">
                     <option value="Bato"></option>
                     <option value="Chadke"></option>
