--- a/bollywood.html
+++ b/bollywood.html
@@ -18,7 +18,8 @@
                     Find
                 </button>
                 <button class="searchtbn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
-                    &#9993;
+                    <p>Wanted to be uploaded unavailable movie in FILMs ?</p>
+                    Mail &#9993; me
                 </button>
                 <datalist id="movielist">
                     <option value="Animal"></option>
