--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                     </a>
                 </div>
             </div>
+            <div id="mail">
+                <h3>Wanted to uploaded unavailable movie in FILMs ?</h3>
+                <button class="searchtbn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
+                     &#9993;
+                </button>
+            </div>
         </div>
     </div>
     <script>
