--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div id="mail">
                 <h3>Wanted to uploaded unavailable movie in FILMs ?</h3>
-                <button class="searchtbn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
+                <button class="mailbtn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
                      &#9993;
                 </button>
             </div>
