--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br><br>
             <div id="mail">
                 <h3>Wanted to uploaded unavailable movie in FILMs ?</h3>
-                <button class="mailbtn" onclick="location.href='mailto:manjilaryal546@gmail.com'">
+                <button class="mailbtn" onclick="location.href='mailto:manjilaryal546@gmail.com?subject=Movie+Request&body=Movie+name:'">
                      &#9993;
                 </button>
             </div>
