--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <br><br>
             <div id="mail">
-                <h3>Wanted to uploaded unavailable movie in FILMs ?</h3>
+                <h3>Looking for a movie that's not on FILMs? Mail me!</h3>
                 <button class="mailbtn" onclick="location.href='mailto:manjilaryal546@gmail.com?subject=Movie Request&body=Movie name:'">
                      &#9993;
                 </button>
