--- a/bollywood.html
+++ b/bollywood.html
@@ -19,7 +19,12 @@
                 </button>
                 <datalist id="movielist">
                     <option value="Animal"></option>
+                    <option value="Chhorii"></option>
+                    <option value="Chhorii 2"></option>
                     <option value="Deva"></option>
+                    <option value="Good Bad Ugly"></option>
+                    <option value="JAAT"></option>
+                    <option value="Jewel Thief: The Heist Begins"></option>
                     <option value="Kaithi"></option>
                     <option value="KGF : Chapter 1"></option>
                     <option value="KGF : Chapter 2"></option>
@@ -29,10 +34,41 @@
                     <option value="RA.ONE"></option>
                     <option value="Salaar"></option>
                     <option value="Sikandar"></option>
+                    <option value="Veera Dheera Sooran: Part 2"></option>
                     <option value="Vikram"></option>
                 </datalist>
             </div>
             <div class="films" id="Bollywood">
+                <div>
+                    <a href="jaat.html">
+                        <img src="jaat.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="jewelthief.html">
+                        <img src="jewelthief.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="chhorii2.html">
+                        <img src="chhorii2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="goodbadugly.html">
+                        <img src="goodbadugly.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="veeradheerasooran.html">
+                        <img src="veeradheerasooran.png" alt="">
+                    </a>
+                </div>
+                 <div>
+                    <a href="chhorii.html">
+                        <img src="chhorii.png" alt="">
+                    </a>
+                </div>
                 <div>
                     <a href="sikandar.html">
                         <img src="sikandar.png" alt="">
