--- a/chhorii2.html
+++ b/chhorii2.html
@@ -20,12 +20,11 @@
             <br><br>
             <h3>Parts</h3>
             <div id="parts">
-                None
-<!--                 <div>
-                    <a href="chadke2.html">
-                        <img src="chadke2.png" alt="" class="parts">
+                <div>
+                    <a href="chhori.html">
+                        <img src="chhori.png" alt="" class="parts">
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
