--- a/chhorii2.html
+++ b/chhorii2.html
@@ -21,8 +21,8 @@
             <h3>Parts</h3>
             <div id="parts">
                 <div>
-                    <a href="chhori.html">
-                        <img src="chhori.png" alt="" class="parts">
+                    <a href="chhorii.html">
+                        <img src="chhorii.png" alt="" class="parts">
                     </a>
                 </div>
             </div>
