--- a/bollywood.html
+++ b/bollywood.html
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="veeradheerasooran.html">
+                    <a href="veeradheerasooran2.html">
                         <img src="veeradheerasooran.png" alt="">
                     </a>
                 </div>
