--- a/bollywood.html
+++ b/bollywood.html
@@ -19,10 +19,14 @@
                 </button>
                 <datalist id="movielist">
                     <option value="Animal"></option>
+                    <option value="The Bhootnii"></option>
                     <option value="Chhorii"></option>
                     <option value="Chhorii 2"></option>
                     <option value="Deva"></option>
                     <option value="Good Bad Ugly"></option>
+                    <option value="HIT"></option>
+                    <option value="HIT: The 2nd Case"></option>
+                    <option value="HIT: The 3rd Case"></option>
                     <option value="JAAT"></option>
                     <option value="Jewel Thief: The Heist Begins"></option>
                     <option value="Kaithi"></option>
@@ -32,6 +36,8 @@
                     <option value="Live"></option>
                     <option value="Marco"></option>
                     <option value="RA.ONE"></option>
+                    <option value="Raid"></option>
+                    <option value="Raid 2"></option>
                     <option value="Salaar"></option>
                     <option value="Sikandar"></option>
                     <option value="Veera Dheera Sooran: Part 2"></option>
@@ -39,6 +45,21 @@
                 </datalist>
             </div>
             <div class="films" id="Bollywood">
+                <div>
+                    <a href="hit3.html">
+                        <img src="hit3.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="raid2.html">
+                        <img src="raid2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="bhootni.html">
+                        <img src="bhootni.png" alt="">
+                    </a>
+                </div>
                 <div>
                     <a href="jaat.html">
                         <img src="jaat.png" alt="">
@@ -105,6 +126,11 @@
                     </a>
                 </div>
                 <div>
+                    <a href="hit2.html">
+                        <img src="hit2.png" alt="">
+                    </a>
+                </div>
+                <div>
                     <a href="vikram.html">
                         <img src="vikram.png" alt="">
                     </a>
@@ -117,6 +143,16 @@
                 <div>
                     <a href="kaithi.html">
                         <img src="kaithi.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="raid.html">
+                        <img src="raid.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="hit.html">
+                        <img src="hit.png" alt="">
                     </a>
                 </div>
                  <div>
