--- a/hit2.html
+++ b/hit2.html
@@ -10,7 +10,7 @@
 <body>
     <div id="content">
         <div id="contentbox">
-            <img src="hit.png" alt="" id="poster">
+            <img src="hit2.png" alt="" id="poster">
             <br>
             <div>
                 <a href="https://drive.google.com/file/d/1siYNAC6_o9T6EgYPWRwKZyRHcSzX6n7T/view?usp=sharing">
