--- a/hit3.html
+++ b/hit3.html
@@ -21,13 +21,13 @@
             <h3>Parts</h3>
             <div id="parts">
                 <div>
-                    <a href="hit2.html">
-                        <img src="hit2.png" alt="" class="parts">
+                    <a href="hit.html">
+                        <img src="hit.png" alt="" class="parts">
                     </a>
                 </div>
                 <div>
-                    <a href="hit3.html">
-                        <img src="hit3.png" alt="" class="parts">
+                    <a href="hit2.html">
+                        <img src="hit2.png" alt="" class="parts">
                     </a>
                 </div>
             </div>
